<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >
    </TabWidget>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/RadioGroup" >
        </FrameLayout>
        <RadioGroup
            android:background="@drawable/common_footbar_bkg"
            android:id="@+id/RadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:orientation="horizontal" >
            <RadioButton
                android:drawableTop="@drawable/home_selector"
                android:id="@+id/home_id"
                style="@style/main_radio_botton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:text="@string/main_home"
                android:paddingTop="2dp"
                android:textSize="12sp" />

            <RadioButton
                android:drawableTop="@drawable/shop_selector"
                android:id="@+id/getmoney_id"
                style="@style/main_radio_botton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                 android:text="@string/main_money"
               android:paddingTop="2dp"
                android:textSize="12sp" />
            <RadioButton
                android:drawableTop="@drawable/user_selector"
                android:id="@+id/user_id"
                style="@style/main_radio_botton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                 android:text="@string/main_user"
                android:paddingTop="2dp"
                android:textSize="12sp" />
            <RadioButton
                android:drawableTop="@drawable/more_selector"
                 android:text="@string/main_more"
                android:id="@+id/more_id"
                style="@style/main_radio_botton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="2dp"
                android:textSize="12sp" />
        </RadioGroup>
    </RelativeLayout>

</TabHost>