<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/action_bar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/user_title"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/more_shape"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/r1"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_margin="2dp"
                android:background="@drawable/more_select_top"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/jianyi"
                    android:layout_width="250dip"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/icon_fore_refund"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="5dp"
                    android:text="@string/user_order"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dip"
                    android:gravity="center_vertical"
                    android:padding="0dip"
                    android:src="@drawable/jiantou" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.6dip"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.6dip"
                android:background="@drawable/line" />

            <RelativeLayout
                android:id="@+id/r3"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_margin="0.01dp"
                android:background="@drawable/user_bg_selector"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/update_name"
                    android:layout_width="250dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8dip"
                    android:drawableLeft="@drawable/icon_fore_refund"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/user_info"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dip"
                    android:padding="0dip"
                    android:src="@drawable/jiantou" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.6dip"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.6dip"
                android:background="@drawable/line" />

            <RelativeLayout
                android:id="@+id/r5"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_margin="2dp"
                android:background="@drawable/user_bg_selector"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tuijian"
                    android:layout_width="250dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8dip"
                    android:drawableLeft="@drawable/icon_fore_refund"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/user_share"
                    android:textColor="#FF0000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dip"
                    android:padding="0dip"
                    android:src="@drawable/jiantou" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.6dip"
                android:background="@drawable/line" />

            <RelativeLayout
                android:id="@+id/r6"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_margin="2dp"
                android:background="@drawable/more_selector_buttom"
                android:clickable="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/about"
                    android:layout_width="250dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8dip"
                    android:drawableLeft="@drawable/icon_fore_refund"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/user_about"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="8dip"
                    android:padding="0dip"
                    android:src="@drawable/jiantou" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin2"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/more_shape"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/r7"
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:layout_margin="0.01dp"
                android:background="@drawable/more_select_top"
                android:clickable="true"
                android:focusable="false"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/help"
                    android:layout_width="250dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8dip"
                    android:drawableLeft="@drawable/icon_fore_refund"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/user_help"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/user_nt"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>