<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/action_bar_bg" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <LinearLayout
                android:id="@+id/lin2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:background="@drawable/more_shape"
                android:orientation="vertical" >

                <RelativeLayout
                    android:onClick="showAd1"
                    android:id="@+id/r1"
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_margin="2dp"
                    android:background="@drawable/more_select_top"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/jianyi"
                        android:layout_width="250dip"
                        android:layout_height="fill_parent"
                        android:drawableLeft="@drawable/icon_fore_refund"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="5dp"
                        android:text="@string/home_bt1"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dip"
                        android:gravity="center_vertical"
                        android:padding="0dip"
                        android:src="@drawable/jiantou" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dip"
                    android:background="@drawable/line" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dip"
                    android:background="@drawable/line" />
                <RelativeLayout
                    android:onClick="showAd2"
                    android:id="@+id/r3"
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_margin="0.01dp"
                    android:background="@drawable/user_bg_selector"
                    android:clickable="true"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="250dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="8dip"
                        android:drawableLeft="@drawable/icon_fore_refund"
                        android:gravity="center_vertical"
                        android:paddingRight="5dp"
                        android:text="@string/home_bt2"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dip"
                        android:padding="0dip"
                        android:src="@drawable/jiantou" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dip"
                    android:background="@drawable/line" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dip"
                    android:background="@drawable/line" />

                <RelativeLayout
                     android:onClick="showAd3"
                    android:id="@+id/r5"
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_margin="2dp"
                    android:background="@drawable/user_bg_selector"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tuijian"
                        android:layout_width="250dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="8dip"
                        android:drawableLeft="@drawable/icon_fore_refund"
                        android:gravity="center_vertical"
                        android:paddingRight="5dp"
                        android:text="@string/home_bt3"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dip"
                        android:padding="0dip"
                        android:src="@drawable/jiantou" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.6dip"
                    android:background="@drawable/line" />

                <RelativeLayout
                    android:id="@+id/r6"
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_margin="2dp"
                    android:background="@drawable/more_selector_buttom"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="250dip"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="8dip"
                        android:drawableLeft="@drawable/icon_fore_refund"
                        android:gravity="center_vertical"
                        android:paddingRight="5dp"
                        android:text="@string/home_bt4"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dip"
                        android:padding="0dip"
                        android:src="@drawable/jiantou" />
                </RelativeLayout>
            </LinearLayout>
             <TextView 
                 android:textSize="12sp"
                 android:textColor="#000000"
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:layout_margin="10dp"
           android:text="@string/home_nt"
           android:layout_below="@+id/lin2"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageButton
                android:id="@+id/imag1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/user_power"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imag2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_power"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imag3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="100dp"
                android:background="@drawable/user_power"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imag4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/user_power"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imag5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:background="@drawable/user_power"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imag6"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginLeft="170dp"
                android:background="@drawable/user_power"
                android:visibility="gone" />
           
    
        </RelativeLayout>
       
        <TextView
            android:layout_gravity="bottom"
            android:id="@+id/noti"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="收拾收拾是色哥森哥色哥森哥森哥是色哥森哥色哥森哥三国杀该公司森哥是观赏鸽色哥森哥色哥森哥是"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>